接口实现优化
