# docs/swagger.json
@@ -25,9 +25,9 @@
                 "summary": "获取到所有的pool",
                 "responses": {
                     "200": {
-                        "description": "ok",
+                        "description": "OK",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/web.ResponseBean"
                         }
                     },
                     "400": {
@@ -60,6 +60,20 @@
                     "type": "integer"
                 },
                 "errorMessage": {
+                    "type": "string"
+                }
+            }
+        },
+        "web.ResponseBean": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "integer"
+                },
+                "data": {
+                    "type": "object"
+                },
+                "msg": {
                     "type": "string"
                 }
             }
